@@ -1,6 +1,6 @@
 --enable-preview
 -Djdk.tracePinnedThreads=full
 -XX:+MaxFDLimit
--XX:+UseZGC
--Xms1G 
--Xmx2G
+-XX:+UseG1GC 
+-Xms4G 
+-Xmx4G
